# rusther

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: message_c4.rs  message_ping.rs  mod.rs  ready_announce.rs  text_ping.rs
src/commands/game_c4/: TODO.md  board.rs  bot_player.rs  bot_player_auto.rs  bot_random.rs  c4.rs  c4_1p.rs  c4_2p.rs  direction.rs  discord_hooks.rs  discord_message.rs  game_status.rs  get_neighbor.rs  index_from_rc.rs  mod.rs  player.rs  readme.md  token.rs
src/rusther/: arbiter.rs  event_sub_handler.rs  mod.rs
src/utility/: mod.rs
src/utility/log/: log_scope_time.rs  mod.rs
src/utility/probe/: mod.rs  scope_time.rs
