[package]
name = "rusther"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
simple_logger = { version = "2.1.0", features = ["colored", "timestamps"] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]
