[package]
name = "rusther"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
simple_logger = "3.0.0"
rand = "0.8.5"

[dev-dependencies]  # dependencies for e.g. tests

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]
